--- a/impressum.html
+++ b/impressum.html
@@ -33,7 +33,7 @@
     <div class="container">
 
       <!-- Brand -->
-      <a class="navbar-brand" href="#" target="_self">
+      <a class="navbar-brand" href="index.html" target="_self">
         <i class="fas fa-basketball-ball mr-2"></i>
       </a>
 
