--- a/impressum.html
+++ b/impressum.html
@@ -23,6 +23,17 @@
 
   </style>
   <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
+	
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-41313155-9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-41313155-9');
+</script>
+
 
 </head>
 
@@ -163,7 +174,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="mailto:basketcamp@gmail.com" target="_blank"
+      <a class="btn btn-outline-white" href="mailto:basketcampbern@gmail.com" target="_blank"
         role="button">Schreib uns eine Email
         <i class="fas fa-paper-plane pl-1"></i>
       </a>
