--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
 
   </style>
   <link rel="icon" href="img/favicon.png" sizes="32x32" type="image/png">
+	
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-41313155-9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-41313155-9');
+</script>
+
 
 </head>
 
@@ -240,7 +251,7 @@
 	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
 	        <h4 class="font-weight-bold dark-grey-text my-4">Ayla</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Training</strong></h6>
+	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 	      </div>
 	      <!-- Grid column -->
 	  
@@ -249,8 +260,8 @@
 	        <div class="mx-auto">
 	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Lukas</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Food</strong></h6>
+	        <h4 class="font-weight-bold dark-grey-text my-4">Leo</h4>
+	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 			</div>
 	      <!-- Grid column -->
 			
@@ -259,8 +270,8 @@
 	        <div class="mx-auto">
 	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Andrin</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Cooking</strong></h6>
+	        <h4 class="font-weight-bold dark-grey-text my-4">Adi</h4>
+	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 			</div>
 	      <!-- Grid column -->
 	  
@@ -443,7 +454,7 @@
 
     <!--Call to action-->
     <div class="pt-4">
-      <a class="btn btn-outline-white" href="mailto:basketcamp@gmail.com" target="_blank"
+      <a class="btn btn-outline-white" href="mailto:basketcampbern@gmail.com" target="_blank"
         role="button">Schreib uns eine Email
         <i class="fas fa-paper-plane pl-1"></i>
       </a>
