--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
           <!--Grid column-->
           <div class="col-12 text-center">
-           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSd5DV5YCBOGSBzIAXJijxdB9XatqnXlYh64sVb4xklohZ79FA/viewform?embedded=true" width="700" height="2400" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScrWR0oiEX-bf2sVwsBZ5jP54kYS1AhFPXFF6IPdc2QUmWsEQ/viewform?embedded=true" width="640" height="2541" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
           </div>
           <!--/Grid column-->
 
@@ -324,22 +324,35 @@
 
   		<!-- Section heading -->
   		<h2 class="h1-responsive font-weight-bold my-5">Kontakt</h2>
-  		<!-- Section description -->
+		  
+		  <div class="row">
+		  	<div class="col">
+			  	<p class="lead grey-text">Bei Fragen kannst du uns gerne kontaktieren via</p>
+					<!--Call to action-->
+    					<div class="pt-4">
+      						<a class="btn btn-outline-white text-lowercase" href="mailto:basketcampbern@gmail.com" target="_blank" role="button" style="font-size: 18px">basketcampbern@gmail.com
+        					<i class="fas fa-paper-plane pl-1"></i>
+      						</a>
+    					</div>
+    				<!--/.Call to action-->
+			  </div>
+		  </div>
+  		<!-- Section description --
   		<p class="lead grey-text w-responsive mx-auto mb-5">Bei Fragen kannst du uns gerne kontaktieren:</p>
 		
-  		<!--Grid row-->
+  		<!--Grid row--
       	<div class="row mb-3 text-white">
 	
-      	  <!--Grid column-->
+      	  <!--Grid column--
       	  <div class="col-lg-6 offset-lg-3 col-md-12 mb-4 mb-md-0">
 	
-      	    <!--Grid row-->
+      	    <!--Grid row--
       	    <div class="row">
 	
-      	      <!--Grid column-->
+      	      <!--Grid column--
       	      <div class="col-md-6">
 	
-      	        <!-- Material outline input -->
+      	        <!-- Material outline input --
       	        <div class="md-form md-outline mb-0">
       	          <input type="text" id="form-first-name" class="form-control">
       	          <label for="form-first-name">Vorname</label>
@@ -348,40 +361,40 @@
       	      </div>
       	      <!--Grid column-->
 	
-      	      <!--Grid column-->
+      	      <!--Grid column--
       	      <div class="col-md-6">
 	
-      	        <!-- Material outline input -->
+      	        <!-- Material outline input --
       	        <div class="md-form md-outline mb-0">
       	          <input type="text" id="form-last-name" class="form-control">
       	          <label for="form-last-name">Nachname</label>
       	        </div>
 	
       	      </div>
-      	      <!--Grid column-->
+      	      <!--Grid column--
 	
       	    </div>
       	    <!--Grid row-->
 	
-      	    <!-- Material outline input -->
+      	    <!-- Material outline input --
       	    <div class="md-form md-outline mt-3">
       	      <input type="email" id="form-email" class="form-control">
       	      <label for="form-email">E-mail</label>
       	    </div>
 	
 	
-      	    <!--Material textarea-->
+      	    <!--Material textarea--
       	    <div class="md-form md-outline mb-3">
       	      <textarea id="form-message" class="md-textarea form-control" rows="3"></textarea>
       	      <label for="form-message">Was willst du uns sonst noch sagen?</label>
       	    </div>
 	
-      	    <button type="submit" class="btn btn-outline-white btn-lg ml-0">Anmelden<i class="far fa-paper-plane ml-2"></i></button>
+      	    <button type="submit" class="btn btn-outline-white btn-lg ml-0">Absenden<i class="far fa-paper-plane ml-2"></i></button>
 	
       	  </div>
-      	  <!--Grid column-->
+      	  <!--Grid column--
 	
-      	</div>
+		  </div>
       	<!--Grid row-->
 
 
