--- a/impressum.html
+++ b/impressum.html
@@ -186,7 +186,7 @@
     <!--Copyright-->
     <div class="footer-copyright py-3">
 	  <a href="#" target="_self">Impressum</a><br> - <br>
-      © <strong>2019</strong> Basketball Camp Femina Bern <br> - <br> Website by <a href="https://www.facebook.com/flo.bachofner" target="_blank">Florian Bachofner</a>
+      © <strong>2019</strong> Basket Camp Femina Bern <br> - <br> Website by <a href="https://www.facebook.com/flo.bachofner" target="_blank">Florian Bachofner</a>
     </div>
     <!--/.Copyright-->
 
