--- a/index.html
+++ b/index.html
@@ -418,11 +418,17 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-  		    <i class="fas fa-chart-area fa-3x red-text"></i>
+			<img src="img/sponsors/js-logo.jpg" alt="js-logo" class="rounded z-depth-1-half" style="height: 100px">
   		    <h5 class="font-weight-bold my-4">J+S</h5>
-  		    <p class="grey-text mb-md-0 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
-  		      maiores aperiam minima assumenda deleniti hic.
-  		    </p>
+
+  		  </div>
+  		  <!-- Grid column -->
+		
+  		  <!-- Grid column -->
+  		  <div class="col-md-4">
+		
+			<img src="img/sponsors/do-more-basket.png" alt="do-more-basket-logo" class="rounded z-depth-1-half" style="height: 100px">
+  		    <h5 class="font-weight-bold my-4">Do More Basket</h5>
 		
   		  </div>
   		  <!-- Grid column -->
@@ -430,24 +436,9 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-  		    <i class="fas fa-book fa-3x cyan-text"></i>
-  		    <h5 class="font-weight-bold my-4">BC Femina Bern</h5>
-  		    <p class="grey-text mb-md-0 mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit
-  		      maiores aperiam minima assumenda deleniti hic.
-  		    </p>
-		
-  		  </div>
-  		  <!-- Grid column -->
-		
-  		  <!-- Grid column -->
-  		  <div class="col-md-4">
-		
-  		    <i class="far fa-comments fa-3x orange-text"></i>
-  		    <h5 class="font-weight-bold my-4">Basketballverband</h5>
-  		    <p class="grey-text mb-0">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit maiores
-  		      aperiam minima assumenda deleniti hic.
-  		    </p>
-		
+			<img src="img/sponsors/swiss-basket-logo.jpg" alt="swiss-basket-logo" class="rounded z-depth-1-half" style="height: 100px">
+  		    <h5 class="font-weight-bold my-4">Swiss Basketball</h5>
+
   		  </div>
   		  <!-- Grid column -->
 		
@@ -456,6 +447,8 @@
 
       </section>
 	  <!-- Section: Sponsoren -->
+		
+	  <hr class="my-5">
       
 
     </div>
@@ -479,7 +472,7 @@
     <!--Copyright-->
     <div class="footer-copyright py-3">
 	  <a href="impressum.html" target="_self">Impressum</a><br> 
-      © <strong>2019</strong> Basketball Camp Femina Bern <br> Website by <a href="https://www.facebook.com/flo.bachofner" target="_blank">Florian Bachofner</a>
+      © <strong>2019</strong> Basket Camp Femina Bern <br> Website by <a href="https://www.facebook.com/flo.bachofner" target="_blank">Florian Bachofner</a>
     </div>
     <!--/.Copyright-->
 
