--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-			<img src="img/sponsors/js-logo.jpg" alt="js-logo" class="rounded z-depth-1-half" style="height: 100px">
+			<img src="img/sponsors/js-logo.jpg" alt="js-logo" class="rounded z-depth-1-half" style="height: 100px; border: 4px solid #E16B2E; padding: 5px">
   		    <h5 class="font-weight-bold my-4">J+S</h5>
 
   		  </div>
@@ -427,7 +427,7 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-			<img src="img/sponsors/do-more-basket.png" alt="do-more-basket-logo" class="rounded z-depth-1-half" style="height: 100px">
+			<img src="img/sponsors/do-more-basket.png" alt="do-more-basket-logo" class="rounded z-depth-1-half" style="height: 100px; border: 4px solid #E16B2E; padding: 5px">
   		    <h5 class="font-weight-bold my-4">Do More Basket</h5>
 		
   		  </div>
@@ -436,7 +436,7 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-			<img src="img/sponsors/swiss-basket-logo.jpg" alt="swiss-basket-logo" class="rounded z-depth-1-half" style="height: 100px">
+			<img src="img/sponsors/swiss-basket-logo.jpg" alt="swiss-basket-logo" class="rounded z-depth-1-half" style="height: 100px; border: 4px solid #E16B2E; padding: 5px">
   		    <h5 class="font-weight-bold my-4">Swiss Basketball</h5>
 
   		  </div>
