grapics disappear on smaller screens

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class="view" style="background-color: #121212; background-repeat: no-repeat; background-size: cover;">
 
     <!-- Mask & flexbox options-->
-    <div class="mask d-flex justify-content-center align-items-center mt-5">
+    <div class="mask d-flex justify-content-center align-items-center mt-5" id="frontbox">
 
       <!-- Content -->
       <div class="text-center text-white mx-5 wow fadeIn">
@@ -131,11 +131,11 @@
   <!-- Full Page Intro -->
 	
 	<div id="ball_1">
-		<img src="img/svg/grapic_basketball_filled_1.svg" alt="basketball" class="rellax" data-rellax-speed="-5">
+		<img src="img/svg/grapic_basketball_filled_1.svg" alt="basketball" class="rellax graphic" data-rellax-speed="-5">
 	</div>
 	
 	<div id="wave_1">
-		<img src="img/svg/graphic_wave.svg" alt="basketball" class="rellax" data-rellax-speed="-3">
+		<img src="img/svg/graphic_wave.svg" alt="basketball" class="rellax graphic" data-rellax-speed="-3">
 	</div>
 
   <!--Main layout-->
@@ -212,11 +212,11 @@
       <!--Section: Main info-->
 		
 	  <div id="pipe_1">
-	    <img src="img/svg/graphic_pipe.svg" alt="pipe" class="rellax " data-rellax-speed="-4">
+	    <img src="img/svg/graphic_pipe.svg" alt="pipe" class="rellax grapic" data-rellax-speed="-4">
 	  </div>
 		
 	  <div id="stopwatch_1">
-		<img src="img/svg/graphic_stopwatch.svg" alt="basketball" class="rellax" data-rellax-speed="-7.5">
+		<img src="img/svg/graphic_stopwatch.svg" alt="basketball" class="rellax grapic" data-rellax-speed="-7.5">
 	  </div>
 		
 	  <hr class="my-5" id="teamSection">
@@ -418,7 +418,7 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-			<img src="img/sponsors/js-logo.jpg" alt="js-logo" class="rounded z-depth-1-half" style="height: 100px; border: 4px solid #E16B2E; padding: 5px">
+			<img src="img/sponsors/js-logo.jpg" alt="js-logo" class="rounded z-depth-1-half" style="height: 100px; border: 3px solid #E16B2E; padding: 5px">
   		    <h5 class="font-weight-bold my-4">J+S</h5>
 
   		  </div>
@@ -427,7 +427,7 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-			<img src="img/sponsors/do-more-basket.png" alt="do-more-basket-logo" class="rounded z-depth-1-half" style="height: 100px; border: 4px solid #E16B2E; padding: 5px">
+			<img src="img/sponsors/do-more-basket.png" alt="do-more-basket-logo" class="rounded z-depth-1-half" style="height: 100px; border: 3px solid #E16B2E; padding: 5px">
   		    <h5 class="font-weight-bold my-4">Do More Basket</h5>
 		
   		  </div>
@@ -436,7 +436,7 @@
   		  <!-- Grid column -->
   		  <div class="col-md-4">
 		
-			<img src="img/sponsors/swiss-basket-logo.jpg" alt="swiss-basket-logo" class="rounded z-depth-1-half" style="height: 100px; border: 4px solid #E16B2E; padding: 5px">
+			<img src="img/sponsors/swiss-basket-logo.jpg" alt="swiss-basket-logo" class="rounded z-depth-1-half" style="height: 100px; border: 3px solid #E16B2E; padding: 5px">
   		    <h5 class="font-weight-bold my-4">Swiss Basketball</h5>
 
   		  </div>
