--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
       <!-- Content -->
       <div class="text-center text-white mx-5 wow fadeIn">
 		<h4 id="title_femina">BC FEMINA BERN</h4>
-        <h1 class="mb-4" id="title_camp">
-          BASKET CAMP <br> BERN 2020
+        <h1 class="mb-4 text-uppercase" id="title_camp">
+          Basket Camp <br> Bern 2020
         </h1>
 		  
 		<h4 id="title_frutigen" class="mb-5">Frutigen, BE</h4>
