--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@
 
           <!--Grid column-->
           <div class="col-12 text-center">
-           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScrWR0oiEX-bf2sVwsBZ5jP54kYS1AhFPXFF6IPdc2QUmWsEQ/viewform?embedded=true" width="640" height="2541" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
+           <iframe src="https://docs.google.com/forms/d/e/1FAIpQLScrWR0oiEX-bf2sVwsBZ5jP54kYS1AhFPXFF6IPdc2QUmWsEQ/viewform?embedded=true" width="100%" height="2541" frameborder="0" marginheight="0" marginwidth="0">Wird geladen…</iframe>
           </div>
-          <!--/Grid column-->
+          <!--/Grid column  640-->
 
         </div>
         <!--/Grid row-->  
