error graphic class

--- a/index.html
+++ b/index.html
@@ -214,11 +214,11 @@
       <!--Section: Main info-->
 		
 	  <div id="pipe_1">
-	    <img src="img/svg/graphic_pipe.svg" alt="pipe" class="rellax grapic" data-rellax-speed="-4">
+	    <img src="img/svg/graphic_pipe.svg" alt="pipe" class="rellax graphic" data-rellax-speed="-4">
 	  </div>
 		
 	  <div id="stopwatch_1">
-		<img src="img/svg/graphic_stopwatch.svg" alt="basketball" class="rellax grapic" data-rellax-speed="-7.5">
+		<img src="img/svg/graphic_stopwatch.svg" alt="basketball" class="rellax graphic" data-rellax-speed="-7.5">
 	  </div>
 		
 	  <hr class="my-5" id="teamSection">
