--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
     <div class="mask d-flex justify-content-center align-items-center mt-5" id="frontbox">
 
       <!-- Content -->
-      <div class="text-center text-white mx-5 wow fadeIn mt-sm-5">
-		<h4 id="title_femina" class="mt-sm-5">BC FEMINA BERN</h4>
-        <h1 class="mb-4 text-uppercase mt-sm-5" id="title_camp">
+      <div class="text-center text-white mx-5 wow fadeIn">
+		<h4 id="title_femina">BC FEMINA BERN</h4>
+        <h1 class="mb-4 text-uppercase" id="title_camp">
           Basket Camp <br> Bern 2020
         </h1>
 		  
