--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
   <div class="view" style="background-color: #121212; background-repeat: no-repeat; background-size: cover;">
 
     <!-- Mask & flexbox options-->
-    <div class="mask d-flex justify-content-center align-items-center mt-5" id="frontbox">
+    <div class="mask d-flex justify-content-center align-items-center  mt-5" id="frontbox">
 
       <!-- Content -->
       <div class="text-center text-white mx-5 wow fadeIn">
@@ -117,7 +117,7 @@
         <p id="title_date" class="my-4 py-4">20. - 25. Juli 2020</p>
 
 
-        <a target="_self" href="#anmeldeSection" class="btn btn-outline-white btn-lg">Jetzt Anmelden
+        <a target="_self" href="#anmeldeSection" class="btn btn-outline-white btn-lg" id="title_button">Jetzt Anmelden
         </a>
 		<br>
 		<a>
