responsive title 2nd try

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
       <!-- Content -->
       <div class="text-center text-white mx-5 wow fadeIn">
 		<h4 id="title_femina">BC FEMINA BERN</h4>
-        <h1 class="mb-4 text-uppercase" id="title_camp">
+        <h1 class="mb-md-4 text-uppercase" id="title_camp">
           Basket Camp <br> Bern 2020
         </h1>
 		  
-		<h4 id="title_frutigen" class="mb-5">Frutigen, BE</h4>
+		<h4 id="title_frutigen" class="mb-md-5">Frutigen, BE</h4>
 
-        <p id="title_date" class="my-4 py-4">20. - 25. Juli 2020</p>
+        <p id="title_date" class="my-md-4 py-md-4">20. - 25. Juli 2020</p>
 
 
         <a target="_self" href="#anmeldeSection" class="btn btn-outline-white btn-lg" id="title_button">Jetzt Anmelden
