removed some objects from img folder, email-button responsive

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
 			  	<p class="lead grey-text">Bei Fragen kannst du uns gerne kontaktieren via</p>
 					<!--Call to action-->
     					<div class="pt-4">
-      						<a class="btn btn-outline-white text-lowercase" href="mailto:basketcampbern@gmail.com" target="_blank" role="button" style="font-size: 18px">basketcampbern@gmail.com
+      						<a class="btn btn-outline-white text-lowercase" href="mailto:basketcampbern@gmail.com" target="_blank" role="button" style="font-size: 16px; padding: .84rem 1.14rem">basketcampbern@gmail.com
         					<i class="fas fa-paper-plane pl-1"></i>
       						</a>
     					</div>
