--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Basket Camp</title>
+  <title>Basket Camp Bern</title>
   <meta name="description" content="Willkommen zum Basket Camp Bern 2020! Eine Woche Basketball für jedes Alter und Niveau in Frutigen.">
 	
   <!-- Font Awesome -->
@@ -80,12 +80,17 @@
 
         <!-- Right -->
         <ul class="navbar-nav nav-flex-icons">
-          <!--<li class="nav-item">
-            <a href="https://www.facebook.com/TheBasketballCamp/?__tn__=kCH-R&eid=ARBomOKXWfX6drwaTzJZmOtpMLNiCQ7g9NqLxdgs1O_ztO_MW9yW3rNDn00E1W5lSTmilgLX89rqsBw7&hc_ref=ARQNBdiAYpLLaEjPoew4uI24XJQqzUabjPMFC1SqF2wK4R-GLx0a1mXVzRQOV257BTU&fref=nf&__xts__[0]=68.ARDcHrwqvV56cfTjACAMbcsL7GJbP4w4nX-Pt0xlqkEAPaiIej-lh_x5TXgemIAacRgw1nOKjQfgFKMlN2DtwbP56jR3ZIAJJ-Xfdl3aedFPriOGLWqplWd8eGpGCd0lHsrtS_VJ3e8VT6W_gVUTuEKkF6aofiACRPaxQgAJnPGFdSEKsmjBOES4_ZBYimicX6bZ4HIuBzzjUYRCfj7NbiVn2oN-HuM4M87X27euQjeJCrtGwRUJzLktx532xjaOBh8PjTw9M78x4gQYylAIKFahxRsBnbr_uHugdbS11yjhjjsG5HbXFmnp_S7I4b-ZpIQw9ucsMUosREVE1PYAULI0" class="nav-link" target="_blank">
-              <i class="fab fa-facebook-f pr-2"></i>
-            </a>
-          </li>-->
           <li class="nav-item">
+            <a href="#" class="nav-link grey-text pt-3" target="_self">
+				<!--<p>FR</p>-->
+            </a>
+          </li>
+		  <li class="nav-item">
+            <a href="#" class="nav-link mr-5 pt-3" target="_self">
+				<!--<p>DE</p>-->
+            </a>
+          </li>
+          <li class="nav-item "><!--pt-2-->
             <a href="http://www.bcfeminabern.ch/" class="nav-link border border-light rounded"
               target="_blank">
               <i class="fas fa-basketball-ball mr-2"></i>BC Femina Bern
