--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </button>
 
       <!-- Links -->
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse my-1" id="navbarSupportedContent">
 
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
@@ -79,18 +79,14 @@
         </ul>
 
         <!-- Right -->
-        <ul class="navbar-nav nav-flex-icons">
+        <ul class="navbar-nav">
           <li class="nav-item">
-            <a href="#" class="nav-link pt-3" target="_self">
-				<p>DE</p>
-            </a>
+            <a class="nav-link" href="#" target="_self">DE</a>
           </li>
 		  <li class="nav-item">
-            <a href="index-fr.html" class="nav-link grey-text mr-5 pt-3" target="_self">
-				<p>FR</p>
-            </a>
+            <a href="index-fr.html" class="nav-link grey-text mr-5" target="_self">FR</a>
           </li>
-          <li class="nav-item pt-2">
+          <li class="nav-item">
             <a href="http://www.bcfeminabern.ch/" class="nav-link border border-light rounded"
               target="_blank">
               <i class="fas fa-basketball-ball mr-2"></i>BC Femina Bern
