photos, team uncommented

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 		  <li class="nav-item">
             <a href="index-fr.html" class="nav-link grey-text mr-5" target="_self">FR</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" style="width: 160px">
             <a href="http://www.bcfeminabern.ch/" class="nav-link border border-light rounded"
               target="_blank">
               <i class="fas fa-basketball-ball mr-2"></i>BC Femina Bern
@@ -169,7 +169,7 @@
 					<i class="fas fa-calendar-week mb-3 text-white"></i><p class="grey-text">20. - 25. Juli 2020</p>
 				</div>
     			<div class="col-md-4">
-					<i class="fas fa-map-marked-alt mb-3 text-white"></i><p class="grey-text">Zivilschutzanlage, Frutigen BE</p>
+					<i class="fas fa-map-marked-alt mb-3 text-white"></i><p class="grey-text">Markthalle<br>Adelbodenstrasse<br>3714 Frutigen BE</p>
 				</div>
     			<div class="col-md-4">
 					<i class="fas fa-dollar-sign mb-3 text-white"></i><p class="grey-text">320 Franken</p>
@@ -230,35 +230,35 @@
 	  <!-- Section: Team -->
 	  <section class="text-center my-5 text-white wow fadeIn">
 	  
-	    <!-- Section heading -->
+	    <!-- Section heading --
 	    <h2 class="h1-responsive font-weight-bold my-5">Team</h2>
-	    <!-- Section description -->
+	    <!-- Section description --
 	    <p class="grey-text w-responsive mx-auto mb-5 lead">Wir sind ein junges Team mit mehrjähriger Camperfahrung für Jugendliche. Uns verbindet die Freude am Basketball und wir spielen seit mehreren Jahren im Verein.</p>
 	  
-	    <!-- Grid row -->
+	    <!-- Grid row --
 	    <div class="row text-center">
-	  
-	      <!-- Grid column -->
+		  	  
+	      <!-- Grid column --
 	      <div class="col-md-3 mb-md-0 mb-5">
 	        <div class="mx-auto">
-	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
-	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Jacky</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
-	      </div>
-	      <!-- Grid column -->
-	  
-	      <!-- Grid column -->
-	      <div class="col-md-3 mb-md-0 mb-5">
-	        <div class="mx-auto">
-	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
+	          <img src="img/team/ayla.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
 	        <h4 class="font-weight-bold dark-grey-text my-4">Ayla</h4>
 	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 	      </div>
 	      <!-- Grid column -->
 	  
+	      <!-- Grid column --
+	      <div class="col-md-3 mb-md-0 mb-5">
+	        <div class="mx-auto">
+	          <img src="img/team/jacky.png" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
+	        </div>
+	        <h4 class="font-weight-bold dark-grey-text my-4">Jacky</h4>
+	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+	      </div>
 	      <!-- Grid column -->
+	  
+	      <!-- Grid column --
 	      <div class="col-md-3 mb-md-0 mb-5">
 	        <div class="mx-auto">
 	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
@@ -268,7 +268,7 @@
 			</div>
 	      <!-- Grid column -->
 			
-		  <!-- Grid column -->
+		  <!-- Grid column --
 	      <div class="col-md-3 mb-md-0 mb-5">
 	        <div class="mx-auto">
 	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
@@ -276,10 +276,10 @@
 	        <h4 class="font-weight-bold dark-grey-text my-4">Adi</h4>
 	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 			</div>
-	      <!-- Grid column -->
+	      <!-- Grid column --
 	  
 	    </div>
-	    <!-- Grid row -->
+	    <!-- Grid row --
 	  
 	  </section>
 	  <!-- Section: Team -->
