--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 			<div class="col-lg-10 offset-lg-1 grey-text mb-5">
 				<p class="lead">Willkommen zum Basketball Camp von Femina Bern!</p>
 				<p class="lead">Hast du Lust auf eine Woche Basketball, Sport und Spass mit Gleichaltrigen im Berner Oberland?</p> 
-				<p class="lead">Nach mehrjähriger Teilnahme am <strong class="white-text">Basket Camp Bern</strong> führen wir es nun zu viert in die nächste Runde! <br> Während 5 Tagen trainieren wir mit rund 40 Jugendlichen zwischen 10 und 20 Jahren in der Dreifachsporthalle Widi in Frutigen. Diese Woche bietet sowohl Anfängern als auch Fortgeschrittenen die Möglichkeit, in verschiedenen Trainingsgruppen die Kenntnisse im Basketball zu vertiefen, Matches zu spielen und Spass zu haben. Neben dem Training in der Halle verbringen wir auch Zeit im Schwimmbad, bei einem Spieleabend oder in einer gemütlichen Runde.</p>
+				<p class="lead">Nach mehrjähriger Teilnahme am <strong class="white-text">Basket Camp Bern</strong> führen wir es nun zu viert in die nächste Runde! <br> Während 5 Tagen trainieren wir mit rund 40 Jugendlichen zwischen 10 und 20 Jahren in der Dreifachsporthalle Widi in Frutigen. Diese Woche bietet sowohl AnfängerInnen als auch Fortgeschrittenen die Möglichkeit, in verschiedenen Trainingsgruppen die Kenntnisse im Basketball zu vertiefen, Matches zu spielen und Spass zu haben. Neben dem Training in der Halle verbringen wir auch Zeit im Schwimmbad, bei einem Spieleabend oder in einer gemütlichen Runde. Wir übernachten in der Markthalle Frutigen.</p>
 				<p class="lead">Möchtest Du dabei sein? Dann melde Dich gleich <a href="#anmeldeSection" class="text-white">hier</a> an.</p>
 			</div>
 			
@@ -227,7 +227,7 @@
 	  <hr class="my-5" id="teamSection">
 	  <hr class="my-5">
 		  
-	  <!-- Section: Team -->
+	  <!-- Section: Team --
 	  <section class="text-center my-5 text-white wow fadeIn">
 	  
 	    <!-- Section heading --
@@ -296,7 +296,7 @@
         <div class="row">
 			
 			<div class="col-12 grey-text mb-2">
-				<p class="lead">Hier kannst du dich direkt online fürs Camp anmelden. Die Anmeldung ist verbindlich.<br> Die Deadline ist der <strong class="white-text">1. Juni 2020.</strong> <br><br> Wir freuen uns auf Dich!</p>
+				<p class="lead">Hier kannst du dich direkt online für das Camp anmelden. Die Anmeldung ist verbindlich.<br> Die Deadline ist der <strong class="white-text">1. Juni 2020.</strong> <br><br> Wir freuen uns auf Dich!</p>
 			</div>
   
         </div>
