--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </button>
 
       <!-- Links -->
-      <div class="collapse navbar-collapse my-1" id="navbarSupportedContent">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
 
         <!-- Left -->
         <ul class="navbar-nav mr-auto">
@@ -79,14 +79,18 @@
         </ul>
 
         <!-- Right -->
-        <ul class="navbar-nav">
+        <ul class="navbar-nav nav-flex-icons">
           <li class="nav-item">
-            <a class="nav-link" href="#" target="_self">DE</a>
+            <a href="#" class="nav-link pt-3" target="_self">
+				<p>DE</p>
+            </a>
           </li>
 		  <li class="nav-item">
-            <a href="index-fr.html" class="nav-link grey-text mr-5" target="_self">FR</a>
+            <a href="index-fr.html" class="grey-text nav-link mr-5 pt-3" target="_self">
+				<p>FR</p>
+            </a>
           </li>
-          <li class="nav-item" style="width: 160px">
+          <li class="nav-item pt-2">
             <a href="http://www.bcfeminabern.ch/" class="nav-link border border-light rounded"
               target="_blank">
               <i class="fas fa-basketball-ball mr-2"></i>BC Femina Bern
@@ -227,18 +231,39 @@
 	  <hr class="my-5" id="teamSection">
 	  <hr class="my-5">
 		  
-	  <!-- Section: Team --
+	  <!-- Section: Team -->
 	  <section class="text-center my-5 text-white wow fadeIn">
 	  
-	    <!-- Section heading --
+	    <!-- Section heading -->
 	    <h2 class="h1-responsive font-weight-bold my-5">Team</h2>
-	    <!-- Section description --
-	    <p class="grey-text w-responsive mx-auto mb-5 lead">Wir sind ein junges Team mit mehrjähriger Camperfahrung für Jugendliche. Uns verbindet die Freude am Basketball und wir spielen seit mehreren Jahren im Verein.</p>
+	    <!-- Section description -->
+	    <p class="grey-text w-responsive mx-auto mb-5 lead">Das Camp wird von einem jungen OK geleitet, welche alle über mehrjährige Camp-Erfahrung verfügen und selbst auch Basketball spielen. <br><br> Wir freuen uns auf dich! :)
+		</p>
 	  
-	    <!-- Grid row --
+	    <!-- Grid row -->
 	    <div class="row text-center">
 		  	  
-	      <!-- Grid column --
+	      <!-- Grid column -->
+	      <div class="col-md-3 mb-md-0 mb-5">
+	        <div class="mx-auto">
+	          <img src="img/team/jacky.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
+	        </div>
+	        <h4 class="font-weight-bold dark-grey-text my-4">Jacky</h4>
+	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+	      </div>
+	      <!-- Grid column -->
+			
+		  <!-- Grid column -->
+	      <div class="col-md-3 mb-md-0 mb-5">
+	        <div class="mx-auto">
+	          <img src="img/team/adi.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
+	        </div>
+	        <h4 class="font-weight-bold dark-grey-text my-4">Adi</h4>
+	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+			</div>
+	      <!-- Grid column -->
+			
+		  <!-- Grid column -->
 	      <div class="col-md-3 mb-md-0 mb-5">
 	        <div class="mx-auto">
 	          <img src="img/team/ayla.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
@@ -247,39 +272,20 @@
 	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 	      </div>
 	      <!-- Grid column -->
+	 
 	  
-	      <!-- Grid column --
-	      <div class="col-md-3 mb-md-0 mb-5">
-	        <div class="mx-auto">
-	          <img src="img/team/jacky.png" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
-	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Jacky</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
-	      </div>
 	      <!-- Grid column -->
-	  
-	      <!-- Grid column --
 	      <div class="col-md-3 mb-md-0 mb-5">
 	        <div class="mx-auto">
-	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
+	          <img src="img/team/leo.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
 	        <h4 class="font-weight-bold dark-grey-text my-4">Leo</h4>
 	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
 			</div>
 	      <!-- Grid column -->
-			
-		  <!-- Grid column --
-	      <div class="col-md-3 mb-md-0 mb-5">
-	        <div class="mx-auto">
-	          <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
-	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Adi</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
-			</div>
-	      <!-- Grid column --
 	  
 	    </div>
-	    <!-- Grid row --
+	    <!-- Grid row -->
 	  
 	  </section>
 	  <!-- Section: Team -->
