updated teammembers DE

--- a/index.html
+++ b/index.html
@@ -248,8 +248,11 @@
 	        <div class="mx-auto">
 	          <img src="img/team/jacky.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Jacky</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+	        <h4 class="font-weight-bold dark-grey-text mt-4">Jacky</h4>
+			<div class="line mb-4"></div>
+	        <p class="grey-text mb-3 mt-4">hat durch das Basketcamp angefangen Basketball zu spielen</p>
+			<p class="grey-text mb-3">spielt aktuell 1. Liga National</p>
+			<p class="grey-text mb-3">ansonsten beim Snowboarden anzutreffen</p>
 	      </div>
 	      <!-- Grid column -->
 			
@@ -258,8 +261,11 @@
 	        <div class="mx-auto">
 	          <img src="img/team/adi.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Adi</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+	        <h4 class="font-weight-bold dark-grey-text mt-4">Adi</h4>
+	        <div class="line mb-4"></div>
+			<p class="grey-text mb-3 mt-4">diverse polysportive Trainingserfahrung</p>
+	        <p class="grey-text mb-3">langjähriger Campteilnehmer</p>
+			<p class="grey-text mb-3">allgemein begeisterter Sportler</p>
 			</div>
 	      <!-- Grid column -->
 			
@@ -268,8 +274,11 @@
 	        <div class="mx-auto">
 	          <img src="img/team/ayla.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Ayla</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+	        <h4 class="font-weight-bold dark-grey-text mt-4">Ayla</h4>
+	        <div class="line mb-4"></div>
+	        <p class="grey-text mb-3 mt-4">spielt bereits seit 10 Jahren bei <br>BC Femina Bern</p>
+			<p class="grey-text mb-3">spielt aktuell 1. Liga National</p>
+			<p class="grey-text mb-3">ist im Vereinsvorstand BC Femina Bern</p>
 	      </div>
 	      <!-- Grid column -->
 	 
@@ -279,8 +288,11 @@
 	        <div class="mx-auto">
 	          <img src="img/team/leo.jpg" class="rounded z-depth-1-half" alt="Sample avatar" style="width: 200px">
 	        </div>
-	        <h4 class="font-weight-bold dark-grey-text my-4">Leo</h4>
-	        <h6 class="text-uppercase grey-text mb-3"><strong>Co-Lead</strong></h6>
+	        <h4 class="font-weight-bold dark-grey-text mt-4">Leo</h4>
+	        <div class="line mb-4"></div>
+	        <p class="grey-text mb-3 mt-4">hat in Thun Erfahrungen als Spielerin und Trainerin gesammelt</p>
+			<p class="grey-text mb-3">spielt aktuell 1. Liga National</p>
+			<p class="grey-text mb-3">ist seit mehreren Jahren Mitleiterin im Basketcamp</p>
 			</div>
 	      <!-- Grid column -->
 	  
@@ -465,7 +477,7 @@
   <!--Main layout-->
 
   <!--Footer-->
-  <footer class="page-footer text-center font-small mt-4 wow fadeIn">
+  <footer class="page-footer text-center font-small mt-4">
 
     <!--Call to action-->
     <div class="pt-4"><!--
